--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
   "name": "custom-agile-toolkit",
   "version": "0.2.0",
-  "main": "index.js",
+  "main": "built/index.js",
+  "types": "index.d.ts",
   "author": "Charles Ferentchak",
-  "license": "",
+  "license": "gpl",
   "dependencies": {
     "lodash": "^4.17.4",
     "node-fetch": "^1.7.3",
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.6.1",
     "assert": "^1.4.1",
     "chai": "^4.1.2",
     "eslint": "^4.10.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
     "jsdoc": "^3.5.5",
     "karma": "^1.7.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^4.0.1"
   },
   "scripts": {
-    "pretest": "tsc",
+    "pretest": "tsc; eslint --fix built/*.js&",
     "test": " ./node_modules/mocha/bin/mocha"
   },
   "directories": {
