--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "CustomAgileToolkit"]
-	path = CustomAgileToolkit
+	path = docs
 	url = https://github.com/CustomAgile/CustomAgileToolkit.git
