--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "node-fetch": "^1.7.3",
+    "npm": "^5.7.1",
     "url": "^0.11.0"
   },
   "devDependencies": {
@@ -25,9 +26,9 @@
     "mocha": "^4.0.1"
   },
   "scripts": {
-    "pretest": "tsc; eslint --fix built/*.js&",
+    "pretest": "tsc",
     "test": " ./node_modules/mocha/bin/mocha",
-    "posttest":"typedoc -out CustomAgileToolkit ./rally*.ts --ignoreCompilerErrors --mode modules&"
+    "posttest": "./moveDocs.sh"
   },
   "directories": {
     "test": "test"
