--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "jsdoc": "^3.5.5",
     "karma": "^1.7.1",
     "karma-mocha": "^1.3.0",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "typescript": "^2.7.2",
+    "typescript-eslint-parser": "^14.0.0"
   },
   "scripts": {
     "pretest": "tsc",
