--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
+    "@types/node": "^9.4.7",
     "assert": "^1.4.1",
     "chai": "^4.1.2",
     "eslint": "^4.10.0",
