--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "karma": "^1.7.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^4.0.1",
+    "typedoc": "^0.11.1",
+    "typedoc-plugin-markdown": "^1.0.14",
     "typescript": "^2.7.2",
     "typescript-eslint-parser": "^14.0.0"
   },
