--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "typedoc": "^0.11.1",
     "typedoc-plugin-markdown": "^1.0.14",
     "typescript": "^2.7.2",
-    "typescript-eslint-parser": "^14.0.0"
+    "typescript-eslint-parser": "^14.0.0",
+    "custom-agile-toolkit": "file:../custom-agile-toolkit"
   },
   "scripts": {
     "pretest": "tsc",
