updates to remove self referenced module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "eslint.enable": true,
     "eslint.autoFixOnSave": true,
-    "eslint.run": "onType"
+    "eslint.run": "onType",
+    "eslint.alwaysShowStatus": true
 }
