--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "custom-agile-toolkit",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "main": "built/index.js",
   "types": "declare/index.d.ts",
   "author": "Charles Ferentchak",
@@ -39,8 +39,7 @@
     "pretest": "tsc",
     "test": "./node_modules/mocha/bin/mocha",
     "posttest": "./moveDocs.sh",
-    "generate": "ts-node ClassGenerator.ts",
-    "preversion": "webpack&"
+    "generate": "ts-node ClassGenerator.ts"
   },
   "directories": {
     "test": "test"
