--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Charles Ferentchak",
   "license": "gpl",
   "dependencies": {
-    "lodash": "^4.17.5",
+    "lodash": "2.4.2",
     "node-fetch": "^1.7.3",
     "npm": "^6.4.1",
     "url": "^0.11.0"
