--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Charles Ferentchak",
   "license": "gpl",
   "dependencies": {
+    "bottleneck": "^2.19.0",
     "lodash": "2.4.2",
     "node-fetch": "^1.7.3",
     "npm": "^6.4.1",
