--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "custom-agile-toolkit",
   "version": "1.0.2",
+  "homepage": "https://github.com/CustomAgile/custom-agile-toolkit/blob/master/README.md",
   "main": "built/index.js",
   "types": "declare/index.d.ts",
   "author": "Charles Ferentchak",
