adding deploy info

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "custom-agile-toolkit",
+    "name": "@customagile/custom-agile-toolkit",
     "version": "1.0.3",
     "homepage": "https://github.com/CustomAgile/custom-agile-toolkit/blob/master/README.md",
     "main": "built/index.js",
@@ -45,6 +45,10 @@
     "directories": {
         "test": "test"
     },
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/"
+    },
+    "repository": "git@github.com:CustomAgile/custom-agile-toolkit.git",
     "keywords": [],
     "description": ""
 }
