--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "eslint.enable": true,
     "eslint.autoFixOnSave": true,
-    "eslint.run": "onType"
+    "eslint.run": "onType",
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    }
 }
