--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "license": "mit",
     "dependencies": {
         "bottleneck": "^2.19.1",
-        "lodash": "2.4.2",
-        "node-fetch": "^1.7.3",
+        "lodash": "^4.17.21",
+        "node-fetch": "^3.2.10",
         "url": "^0.11.0"
     },
     "devDependencies": {
@@ -18,19 +18,19 @@
         "assert": "^1.5.0",
         "awesome-typescript-loader": "^5.2.1",
         "chai": "^4.2.0",
-        "eslint": "^4.19.1",
-        "eslint-config-airbnb": "^16.1.0",
-        "eslint-config-airbnb-base": "^12.1.0",
+        "eslint": "^8.25.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.18.0",
         "eslint-plugin-jsx-a11y": "^6.1.2",
         "eslint-plugin-react": "^7.14.2",
         "jsdoc": "^3.6.2",
-        "karma": "^4.1.0",
-        "karma-mocha": "^1.3.0",
-        "mocha": "^4.1.0",
+        "karma": "^6.4.1",
+        "karma-mocha": "^2.0.1",
+        "mocha": "^10.1.0",
         "source-map-loader": "^0.2.4",
-        "typedoc": "^0.14.2",
-        "typedoc-plugin-markdown": "^1.2.1",
+        "typedoc": "^0.23.17",
+        "typedoc-plugin-markdown": "^3.13.6",
         "typescript": "^3.5.2",
         "typescript-eslint-parser": "^14.0.0",
         "webpack": "^4.35.0",
